[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bamsurgeon"
dynamic = ["version"]
dependencies = []
requires-python = ">=3.6"
authors = [
  {name = "Tim Fey", email = "tmfy_mail-studium@yahoo.com"},
]
description = "Bamsurgeon allows to artificially creates SVs, SNVs and INDELs"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["genomic", "NGS", "SV", "SNV", "INDEL", "mutations", "bioinformatics"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
]

[project.urls]
Homepage = "https://github.com/adamewing/bamsurgeon"
Documentation = "https://github.com/adamewing/bamsurgeon/blob/master/doc/Manual.pdf"
Repository = "https://github.com/adamewing/bamsurgeon"

