[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bamsurgeon"
version = "1.4.1"
dependencies = []
requires-python = ">=3.6"
authors = [
  {name = "Adam D Ewing", email = "adam.ewing@gmail.com"},
]
description = "Bamsurgeon allows to artificially creates SVs, SNVs and INDELs"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["genomic", "NGS", "SV", "SNV", "INDEL", "mutations", "bioinformatics"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
]

[project.scripts]
addsv = "bamsurgeon.addsv:main"
addsnv = "bamsurgeon.addsnv:main"
addindels = "bamsurgeon.addindel:main"

[project.urls]
Homepage = "https://github.com/adamewing/bamsurgeon"
Documentation = "https://github.com/adamewing/bamsurgeon/blob/master/doc/Manual.pdf"
Repository = "https://github.com/adamewing/bamsurgeon"

[tool.setuptools.packages.find] 
include = ["bamsurgeon", "test", "test_data"]